tests/paczka1/small_fuzzy/31515331.err
Error in line 2: Eqf S968 7,2
Error in line 1: uDC S102 18,2
Error in line 5: Ogi7jUOi7 S984 51,0
Error in line 14: Zwn A499 -4,7
Error in line 16: Ogi7jUOi7 S984 76,16
